[project]
name = "infocal"
version = "0.0.1"
authors = [
  { name="Lorenz Köhl", email="lo@lrz.me" },
]
description = "Put your information in focus"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click", "sqlite-utils"
]

[project.scripts]
log-whisper = "infocal.voicelog.cli:cli"


[project.urls]
"Homepage" = "https://github.com/mye/infocal"
"Bug Tracker" = "https://github.com/mye/infocal/issues"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-report ndiff"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
